Revision history for JSON-MaybeXS

1.002002 - 2014-04-23
 - more metadata fiddling, to remove the Cpanel::JSON::XS dependency visible
   to static analyzers (the prequisites at install time remain unchanged)

1.002001 - 2014-04-23
 - fix installation on older perls with an older ExtUtils::MakeMaker
   (RT#94964)

1.002000 - 2014-04-22
 - Now also supports JSON::XS, when available: Cpanel::JSON::XS will only be
   installed when there is no XS backend already installed; Cpanel::JSON::XS
   will be used over JSON::XS when both are installed.

1.001000 - 2013-12-11
  - Add a constructor for people who want to forget how silly the JSON API is

1.000000 - 2013-05-22
  - Released on an unsuspecting world.