@@ -1,5 +1,7 @@
 Revision history for JSON-MaybeXS
 
+ - document how to use booleans
+
 1.002002 - 2014-04-23
  - more metadata fiddling, to remove the Cpanel::JSON::XS dependency visible
    to static analyzers (the prequisites at install time remain unchanged)
